Integration with OpenAI client

--- a/sjsubot/templates/blog/update.html
+++ b/sjsubot/templates/blog/update.html
@@ -2,12 +2,12 @@
 
 {% block content %}
   <form method="post">
-    <label for="title">Title</label>
-    <input name="title" id="title" value="{{ request.form['title'] or post['title'] }}" required>
-    <textarea name="history" id="history" readonly>{{ request.form['body'] or post['body'] }}</textarea>
+    <label for="history">{{ post['title'] }}</label>
+    <textarea name="history" id="history" readonly>{{ post['body'] }}</textarea>
     <hr>
     <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
     <input type="submit" value="Send">
+
   </form>
   <hr>
 {% endblock %}
