--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <header class="App-header">
             <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
             <p>
-                GitHub Codespaces <span class="heart">♥️hello</span> Flask
+                GitHub Codespaces <span class="heart">♥️hello wulb</span> Flask
             </p>
             <p class="small">
                 Edit <code>templates/index.html</code> and refresh to see your changes!
